[gd_scene load_steps=21 format=3 uid="uid://b5o18sbk4ypar"]

[ext_resource type="PackedScene" uid="uid://ddwe67q5fgedw" path="res://assets/ui/tracen/tracen_academy.tscn" id="1_2jrec"]
[ext_resource type="Script" path="res://scenes/ui/academy/menu_academy.gd" id="1_ueiln"]
[ext_resource type="PackedScene" uid="uid://d2pr13dqnvme2" path="res://scenes/ui/academy/cam_initial_menu.tscn" id="4_j2yy8"]
[ext_resource type="PackedScene" uid="uid://doyxcgm8r6edh" path="res://scenes/ui/academy/cam_fountain_menu.tscn" id="5_dswq1"]
[ext_resource type="PackedScene" uid="uid://b7pfkfsy5a05" path="res://scenes/ui/academy/menu_camera.tscn" id="5_t5vkb"]
[ext_resource type="PackedScene" uid="uid://dhi2e4527p0wh" path="res://scenes/ui/academy/cam_spica_menu.tscn" id="6_wc85s"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_wyxeu"]
sky_top_color = Color(5.77569e-07, 0.622787, 0.968066, 1)
sky_horizon_color = Color(0.577675, 0.844434, 1, 1)
ground_bottom_color = Color(0.318745, 0.516423, 0.932357, 1)
ground_horizon_color = Color(0.2302, 0.55642, 0.867941, 1)

[sub_resource type="Sky" id="Sky_d7v63"]
sky_material = SubResource("ProceduralSkyMaterial_wyxeu")

[sub_resource type="Environment" id="Environment_51inu"]
background_mode = 2
sky = SubResource("Sky_d7v63")
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.1
reflected_light_source = 1
ssao_enabled = true
ssao_intensity = 1.0

[sub_resource type="ViewportTexture" id="ViewportTexture_0ysej"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y25ph"]
resource_local_to_scene = true
transparency = 1
no_depth_test = true
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_0ysej")
disable_receive_shadows = true

[sub_resource type="PlaneMesh" id="PlaneMesh_gy6so"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_y25ph")
size = Vector2(1, 1)
orientation = 2

[sub_resource type="ViewportTexture" id="ViewportTexture_lp8u2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_62v4g"]
resource_local_to_scene = true
transparency = 1
no_depth_test = true
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_lp8u2")
disable_receive_shadows = true

[sub_resource type="PlaneMesh" id="PlaneMesh_crr0e"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_62v4g")
size = Vector2(1, 1)
orientation = 2

[sub_resource type="ViewportTexture" id="ViewportTexture_iyfra"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_timay"]
resource_local_to_scene = true
transparency = 1
no_depth_test = true
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_iyfra")
disable_receive_shadows = true

[sub_resource type="PlaneMesh" id="PlaneMesh_2aa2i"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_timay")
size = Vector2(1, 1)
orientation = 2

[sub_resource type="Curve3D" id="Curve3D_iuq7k"]
_data = {
"points": PackedVector3Array(-14.9681, 22.1026, 2.46017, 14.9681, -22.1026, -2.46017, -31.392, 77.094, 133.588, -0.590462, -1.47195, 39.8657, 0.590462, 1.47195, -39.8657, 23.713, 1.694, 48.668),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="Curve3D" id="Curve3D_tkw6u"]
_data = {
"points": PackedVector3Array(-5.25857, -45.1358, -66.1271, 5.25857, 45.1358, 66.1271, 23.713, 1.694, 48.668, -52.5733, 40.2805, -0.393051, 8.97201, 4.19617e-05, 4.92135, 168.439, 1.024, 130.088),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[node name="MenuAcademy" type="Node3D"]
script = ExtResource("1_ueiln")

[node name="tracen-academy" parent="." instance=ExtResource("1_2jrec")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.798667, -0.355572, 0.485489, -0.268923, 0.510835, 0.816534, -0.538341, -0.782698, 0.312365, 0, 53.3748, 37.9698)
shadow_enabled = true
shadow_opacity = 0.43
directional_shadow_mode = 1
directional_shadow_blend_splits = true
directional_shadow_max_distance = 200.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_51inu")

[node name="ActiveCamera" type="Camera3D" parent="."]
cull_mask = 1023

[node name="Menus" type="Node3D" parent="."]

[node name="CamInitial" parent="Menus" instance=ExtResource("5_t5vkb")]
unique_name_in_owner = true
transform = Transform3D(0.87462, 0.271102, -0.401925, 0, 0.829038, 0.559193, 0.48481, -0.489081, 0.725093, -31.392, 77.094, 133.588)
distance = 50.0

[node name="Plane" parent="Menus/CamInitial" index="0"]
mesh = SubResource("PlaneMesh_gy6so")

[node name="CamInitialMenu" parent="Menus/CamInitial/SubViewport" index="0" instance=ExtResource("4_j2yy8")]

[node name="CamFountain" parent="Menus" instance=ExtResource("5_t5vkb")]
unique_name_in_owner = true
transform = Transform3D(0.950516, 0.0367853, 0.308491, 0, 0.992966, -0.118404, -0.310676, 0.112545, 0.943829, 23.713, 1.694, 48.668)

[node name="Plane" parent="Menus/CamFountain" index="0"]
mesh = SubResource("PlaneMesh_crr0e")

[node name="CamFountainMenu" parent="Menus/CamFountain/SubViewport" index="0" instance=ExtResource("5_dswq1")]

[node name="CamSpica" parent="Menus" instance=ExtResource("5_t5vkb")]
unique_name_in_owner = true
transform = Transform3D(0.761538, 0, -0.64812, 0, 1, 0, 0.64812, 0, 0.761538, 168.439, 1.024, 130.088)
distance = 5.0

[node name="Plane" parent="Menus/CamSpica" index="0"]
mesh = SubResource("PlaneMesh_2aa2i")

[node name="CamSpicaMenu" parent="Menus/CamSpica/SubViewport" index="0" instance=ExtResource("6_wc85s")]

[node name="PathInitialFountain" type="Path3D" parent="."]
curve = SubResource("Curve3D_iuq7k")

[node name="Follow" type="PathFollow3D" parent="PathInitialFountain"]
transform = Transform3D(0.162185, 0.813588, -0.558363, 0, 0.565855, 0.824504, 0.986758, -0.133722, 0.0917732, -31.392, 77.094, 133.588)

[node name="PathFountainSpica" type="Path3D" parent="."]
curve = SubResource("Curve3D_tkw6u")

[node name="Follow" type="PathFollow3D" parent="PathFountainSpica"]
transform = Transform3D(-0.996852, -0.0445939, -0.0655394, 0, 0.826767, -0.562543, 0.0792718, -0.560773, -0.824165, 23.713, 1.694, 48.668)

[editable path="Menus/CamInitial"]
[editable path="Menus/CamFountain"]
[editable path="Menus/CamSpica"]
